--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <img src="images/image-qr-code.png" alt="qr code image" width="288px">
 
-  <p class="title">Improve your front-end skills by building projects</p>
+  <h1 class="title">Improve your front-end skills by building projects</h1>
 
    <p class="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
   
